# demo-calendar

./: .gitignore  CLAUDE.md  README.md  calendar.db  pyproject.toml
app/: __init__.py  main.py
app/models/: database.py  schemas.py
app/templates/: index.html
